--- a/public/template/assets/css/style.css
+++ b/public/template/assets/css/style.css
@@ -170,21 +170,21 @@ h6 {
 .navbar .active,
 .navbar .active:focus,
 .navbar li:hover > a {
-    color: #0F00FF;
+    color: #0f00ff;
 }
 .navbar .getstarted,
 .navbar .getstarted:focus {
-    color: #0F00FF;
+    color: #0f00ff;
     padding: 8px 25px;
     margin-left: 30px;
     border-radius: 4px;
-    border: 2px solid #0F00FF;
+    border: 2px solid #0f00ff;
     transition: 0.3s;
     font-size: 14px;
 }
 .navbar .getstarted:hover,
 .navbar .getstarted:focus:hover {
-    background: #0F00FF;
+    background: #0f00ff;
     color: #fff;
 }
 .navbar .dropdown ul {
@@ -214,7 +214,7 @@ h6 {
 .navbar .dropdown ul a:hover,
 .navbar .dropdown ul .active:hover,
 .navbar .dropdown ul li:hover > a {
-    color: #5cb874;
+    color: #0f00ff;
 }
 .navbar .dropdown:hover > ul {
     opacity: 1;
@@ -364,7 +364,7 @@ h6 {
     content: "";
     opacity: 0.2;
     filter: alpha(opacity=40);
-    background-color: #88E0EF;
+    background-color: #88e0ef;
 }
 #hero .carousel-container {
     display: flex;
@@ -441,7 +441,7 @@ h6 {
 }
 #hero .carousel-indicators li.active {
     opacity: 1;
-    background: #0F00FF;
+    background: #0f00ff;
 }
 #hero .btn-get-started {
     font-family: "Raleway", sans-serif;
@@ -1284,5 +1284,4 @@ section {
 }
 #footer .credits {
     font-size: 13px;
-    
 }
